syntax = "proto3";

package corndogs.v1alpha1;

message Task {
  string uuid = 1;
  string queue = 2;
  string current_state = 3;
  string auto_target_state = 4;
  int64 submit_time = 5;
  int64 update_time = 6;
  int64 timeout = 7;
  bytes payload = 8;
}

message SubmitTaskRequest {
  string queue = 2;
  string current_state = 3;
  string auto_target_state = 4;
  int64 timeout = 7;
  bytes payload = 8;
}

message SubmitTaskResponse {
  Task task = 1;
}

message GetTaskStateByIDRequest {
  string uuid = 1;
}

message GetTaskStateResponse {
  Task task = 1;
}

message GetNextTaskRequest {
  string queue = 1;
  string current_state = 2;
}

message GetNextTaskResponse {
  Task task = 1;
}

message CompleteTaskRequest {
  string uuid = 1;
  string queue = 2;
  string current_state = 3;
}

message CompleteTaskResponse {
  Task task = 1;
}

message UpdateTaskRequest {
  string uuid = 1;
  string queue = 2;
  string current_state = 3;
  string new_state = 4;
}

message UpdateTaskResponse {
  Task task = 1;
}

message CancelTaskRequest {
  string uuid = 1;
  string queue = 2;
  string current_state = 3;
}

message CancelTaskResponse {
  Task task = 1;
}

message EmptyRequest {}

service CorndogsService {
  rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse) {}
  rpc GetTaskStateByID(GetTaskStateByIDRequest) returns (GetTaskStateResponse) {}
  rpc GetNextTask(GetNextTaskRequest) returns (GetNextTaskResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse) {}
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse) {}
}